# cuda_muons

./: .gitignore  README.md  build_geant4.sh  cuda_muons.py  install_cuda.sh  set_env.sh
experiments/: benchmark_time.py  compare_geant4_and_histos.py
faster_muons_torch/: bindings.cpp  common.cu  common.cuh  cuda_muons_field_map.cu  cuda_muons_uniform_field.cu  cuda_muons_uniform_map.cu  material_histograms.h  my_extension.cu  setup.py
geant4/cpp/: CMakeLists.txt  CustomMagneticField.cc  CustomSteppingAction.cc  CustomSteppingAction.hh  DetectorConstruction.cc  DetectorConstruction.hh  GDetectorConstruction.cc  GDetectorConstruction.hh  MuonSlabs.cc  SlimFilm.cc  SlimFilmSensitiveDetector.cc  SlimFilmSensitiveDetector.hh  main.cc
geant4/geometry/: gigantic_sphere.py  ship_muon_shield_customfield.py
utils_cuda_muons/: build_histograms.py  collect_geant_data.py  get_geometry.py  get_magnetic_field.py  unify_data.py
